--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,20 @@
-alembic==1.9.2
-asttokens==2.0.8
-backcall==0.2.0
-bcrypt==4.0.1
-blinker==1.5
+autopep8==2.0.1
 click==8.1.3
-colorama==0.4.5
-debugpy==1.6.3
-decorator==5.1.1
-dnspython==2.2.1
+colorama==0.4.6
 dominate==2.7.0
-email-validator==1.3.0
-entrypoints==0.4
-executing==1.1.0
 Flask==2.2.2
-Flask-Bcrypt==1.0.1
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Migrate==4.0.2
 Flask-Moment==1.0.5
 Flask-SQLAlchemy==3.0.2
-Flask-WTF==1.0.1
-greenlet==1.1.3
-idna==3.4
-ipykernel==6.16.0
-ipython==8.5.0
+Flask-WTF==1.1.1
+greenlet==2.0.1
 itsdangerous==2.1.2
-jedi==0.18.1
 Jinja2==3.1.2
-jupyter-core==4.11.1
-jupyter_client==7.3.5
-Mako==1.2.4
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.5
-packaging==21.3
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-prompt-toolkit==3.0.31
-psutil==5.9.2
-pure-eval==0.2.2
-Pygments==2.13.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pywin32==304
-pyzmq==24.0.1
-six==1.16.0
-SQLAlchemy==1.4.41
-stack-data==0.5.1
-tornado==6.2
-traitlets==5.4.0
+MarkupSafe==2.1.2
+packaging==23.0
+pycodestyle==2.10.0
+SQLAlchemy==1.4.46
+tomli==2.0.1
 visitor==0.1.3
-wcwidth==0.2.5
 Werkzeug==2.2.2
 WTForms==3.0.1
